--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta
             name="description"
             content="Final project of the Team Treehouse Full Stack JavaScript Techdegree."
         />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <title>Full Stack App with React and a REST API</title>
+
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
+            rel="stylesheet"
+        />
     </head>
 
     <body>
